# boring_tool

./: .gitignore  CMakeLists.txt  PROJECT_STRUCTURE.md  README.md  build.bat  build.sh  run_tests.sh
cmake/: boring_toolConfig.cmake.in
examples/: CMakeLists.txt  main.cpp
include/boring_tool/: example.hpp  span.h
src/: CMakeLists.txt  example.cpp
tests/: CMakeLists.txt  example_test.cpp  simple_test.cpp  span_test.cpp
